# fast-mp3-augment

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
fast_mp3_augment/: __init__.py
tests/: test_fast_mp3_augment.py
